# reference-c-lib

./: .dockerignore  .gitignore  CMakeLists.txt  COPYING  Dockerfile  Doxyfile  README.md  buildspec.yml
src/: CMakeLists.txt
src/include/gaus/: gaus_client.h  gaus_client_report_types.h  gaus_client_types.h
src/libgaus/: CMakeLists.txt  curl_wrapper.c  curl_wrapper.h  gaus.c  gaus.h  gaus_authenticate.c  gaus_check_for_updates.c  gaus_json_helpers.c  gaus_json_helpers.h  gaus_register.c  gaus_report.c  log.c  log.h  request.c  request.h
test/: CMakeLists.txt  authenticate_test.cpp  check_for_updates_test.cpp  curl_mock.cpp  curl_mock.h  init_test.cpp  register_test.cpp  report_test.cpp  unittest.cpp
